issue #409 - avoid overflow of current folder bar in columns view

--- a/chrome/content/skin/quickfolders-navigation.css
+++ b/chrome/content/skin/quickfolders-navigation.css
@@ -13,6 +13,7 @@
   color: var(--lwt-text-color, --lwt-toolbar-field-color);
 	margin-bottom: -3px;
 	overflow-y: visible !important;
+	overflow-x: clip;
 	padding-top: 0 !important;
 	padding-bottom: 1px;
 	width: 100%;
